Fixed overflow bug and new font

--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
-@font-face{
-	font-family:'Apercu';
-	src: url(//:) format ('no404'), url('Apercu.otf') format('opentype'); 
-}
+@import url(https://fonts.googleapis.com/css?family=Lato);
 
 body {
-	font-family: 'Apercu';
+	font-family: 'Lato';
 	margin: 0;
 }
 
@@ -149,6 +146,7 @@ header .menu .item a:hover {
 
 .row .row {
 	width: 100%;
+	overflow-x: hidden;
 }
 
 .row .logo {
